WIP: Webpack environment.

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,10 @@
 </head>
 <body>
   <div class="container">
-    <h1>Get Weather Conditions From Anywhere!</h1>
-    <p>To get the current weather conditions for a location, please enter the city name, the city and state separated by a comma, or zip code. Here are four examples:</p>
+    <h1>Currency Exchange Application!</h1>
+    <p>Welcome to the Currency Exchange Application! With this user-friendly web tool, you can effortlessly convert U.S. dollars to various international currencies. Simply enter the amount you wish to convert and select your desired target currency from the dropdown menu. Our application fetches the most up-to-date exchange rates through an API call, ensuring accuracy in your currency conversions. Whether you're planning a trip abroad or just curious about the value of your money in different parts of the world, our app provides quick and reliable currency conversion results. Experience the convenience of seamless currency exchange at your fingertips!</p>
     <pre>
-      Portland
-      Atlanta, Georgia
-      cairo
-      97217
+   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad ipsam vero sunt aspernatur quam soluta eligendi tenetur consequuntur eveniet excepturi, officiis culpa a dolores recusandae quisquam veniam exercitationem aperiam similique?
     </pre>
     <form>
       <label for="location">Enter a location (city or zip):</label>
