--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,35 @@
-<html lang="en-US">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="./currency.js"></script>
+  <title>Currency Exchange</title>
+  <link rel="stylesheet" href="./css/styles.css">
+</head>
+<body>
+  <h1>Currency Exchange Calculator</h1>
+  <div>
+    <label for="amount">Amount in USD:</label>
+    <input type="number" id="amount" step="0.01" placeholder="Enter amount">
+  </div>
+  <div>
+    <label for="currency">Target Currency:</label>
+    <select id="currency">
+      <option value="EUR">EUR</option>
+      <option value="GBP">GBP</option>
+      <option value="JPY">JPY</option>
+      <!-- Add more currency options as needed -->
+    </select>
+  </div>
+  <button id="convert">Convert</button>
+  <div id="result"></div>
+
+  
+</body>
+</html>
+
+<!-- <html lang="en-US">
 <head>
   <title>Weather</title>
 </head>
@@ -18,4 +49,4 @@
     <p id="showResponse2"></p>
   </div>
 </body>
-</html>
+</html> -->
