--- a/src/index.html
+++ b/src/index.html
@@ -9,23 +9,23 @@
 </head>
 <body>
   <h1>Currency Exchange Calculator</h1>
-  <div>
-    <label for="amount">Amount in USD:</label>
-    <input type="number" id="amount" step="0.01" placeholder="Enter amount">
-  </div>
-  <div>
-    <label for="currency">Target Currency:</label>
-    <select id="currency">
-      <option value="EUR">EUR</option>
-      <option value="GBP">GBP</option>
-      <option value="JPY">JPY</option>
-      <!-- Add more currency options as needed -->
-    </select>
-  </div>
-  <button id="convert">Convert</button>
+  <form id="currencyForm">
+    <div>
+      <label for="amount">Amount in USD:</label>
+      <input type="number" id="amount" step="0.01" placeholder="Enter amount" required>
+    </div>
+    <div>
+      <label for="currency">Target Currency:</label>
+      <select id="currency">
+        <option value="EUR">EUR</option>
+        <option value="GBP">GBP</option>
+        <option value="JPY">JPY</option>
+        <!-- Add more currency options as needed -->
+      </select>
+    </div>
+    <button type="submit" id="convert">Convert</button>
+  </form>
   <div id="result"></div>
-
-  
 </body>
 </html>
 
