--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="./currency.js"></script>
+  <script src="./src/currency.js"></script>
   <title>Currency Exchange</title>
-  <link rel="stylesheet" href="./css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
   <h1>Currency Exchange Calculator</h1>
   <form id="currencyForm">
     <div>
       <label for="amount">Amount in USD:</label>
-      <input type="number" id="amount" step="0.01" placeholder="Enter amount" required>
+      <input type="number" id="amount" step="0.01" max="1000000" placeholder="Enter amount" required>
     </div>
     <div>
       <label for="currency">Target Currency:</label>
@@ -28,25 +28,3 @@
   <div id="result"></div>
 </body>
 </html>
-
-<!-- <html lang="en-US">
-<head>
-  <title>Weather</title>
-</head>
-<body>
-  <div class="container">
-    <h1>Currency Exchange Application!</h1>
-    <p>Welcome to the Currency Exchange Application! With this user-friendly web tool, you can effortlessly convert U.S. dollars to various international currencies. Simply enter the amount you wish to convert and select your desired target currency from the dropdown menu. Our application fetches the most up-to-date exchange rates through an API call, ensuring accuracy in your currency conversions. Whether you're planning a trip abroad or just curious about the value of your money in different parts of the world, our app provides quick and reliable currency conversion results. Experience the convenience of seamless currency exchange at your fingertips!</p>
-    <pre>
-   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad ipsam vero sunt aspernatur quam soluta eligendi tenetur consequuntur eveniet excepturi, officiis culpa a dolores recusandae quisquam veniam exercitationem aperiam similique?
-    </pre>
-    <form>
-      <label for="location">Enter a location (city or zip):</label>
-      <input id="location" type="text" name="location">
-      <button type="submit" class="btn-success" id="weatherLocation">Get Current Temperature and Humidity</button>
-    </form>
-    <p id="showResponse"></p>
-    <p id="showResponse2"></p>
-  </div>
-</body>
-</html> -->
