--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <h1>Currency Exchange Calculator</h1>
+  <p id="description">Effortlessly convert USD to three major global currencies – EUR, JPY, and GBP – with real-time precision.</p>
   <form id="currencyForm">
     <div>
       <label for="amount">Amount in USD:</label>
