Calculate two additional currencies.

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1>Currency Exchange Calculator</h1>
-  <p id="description">Effortlessly convert USD to three major global currencies – EUR, JPY, and GBP – with real-time precision.</p>
+  <p id="description">Effortlessly convert United States Dollars (USD) to five major global currencies: Euro (EUR), Yen (JPY), Kuwaiti Dinar (KWD), Cayman Islands Dollar (KYD), and British Pound (GBP).</p>
   <form id="currencyForm">
     <div>
       <label for="amount">Amount in USD:</label>
@@ -19,9 +19,10 @@
       <label for="currency">Target Currency:</label>
       <select id="currency">
         <option value="EUR">EUR</option>
-        <option value="GBP">GBP</option>
         <option value="JPY">JPY</option>
-        <!-- Add more currency options as needed -->
+        <option value="KWD">KWD</option>
+        <option value="KWD">KYD</option>
+        <option value="GBP">GPB</option>
       </select>
     </div>
     <button type="submit" id="convert">Convert</button>
