BUGFIX: exchange rate.

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
         <option value="EUR">EUR</option>
         <option value="JPY">JPY</option>
         <option value="KWD">KWD</option>
-        <option value="KWD">KYD</option>
+        <option value="KYD">KYD</option>
         <option value="GBP">GPB</option>
       </select>
     </div>
