BUGFIX: indentation, spacing, typos.

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
         <option value="JPY">JPY</option>
         <option value="KWD">KWD</option>
         <option value="KYD">KYD</option>
-        <option value="GBP">GPB</option>
+        <option value="GBP">GBP</option>
       </select>
     </div>
     <button type="submit" id="convert">Convert</button>
