BUGFIX: indentation, spacing, typos.

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,11 @@
   <title>Currency Exchange</title>
   <link rel="stylesheet" href="/css/styles.css">
 </head>
+
 <body>
   <h1>Currency Exchange Calculator</h1>
-  <p id="description">Effortlessly convert United States Dollars (USD) to five major global currencies: Euro (EUR), Yen (JPY), Kuwaiti Dinar (KWD), Cayman Islands Dollar (KYD), and British Pound (GBP).</p>
+  <p id="description">Effortlessly convert United States Dollars (USD) to five major global currencies: Euro (EUR), Yen
+    (JPY), Kuwaiti Dinar (KWD), Cayman Islands Dollar (KYD), and British Pound (GBP).</p>
   <form id="currencyForm">
     <div>
       <label for="amount">Amount in USD:</label>
@@ -29,4 +32,5 @@
   </form>
   <div id="result"></div>
 </body>
+
 </html>
